# PromptGuard-MCP

./: .gitignore  DECISIONS.md  NEXT_PLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_code_config.json  demo.md  github_action_workflow.yml
src/promptguard/: __init__.py  cli.py  models.py  server.py
src/promptguard/adapters/: __init__.py  anthropic.py  base.py  http.py  openai.py
src/promptguard/corpus/: __init__.py  llm01_prompt_injection.yaml  llm02_insecure_output.yaml  llm06_sensitive_disclosure.yaml  llm08_excessive_agency.yaml
src/promptguard/engine/: __init__.py  adaptive.py  classifier.py  mutations.py
src/promptguard/reporting/: __init__.py  json_report.py  markdown_report.py  sarif_report.py
src/promptguard/tools/: __init__.py  audit_prompt.py  check_injection.py  redteam_endpoint.py
tests/: conftest.py  test_adapters.py  test_adaptive.py  test_audit_prompt.py  test_check_injection.py  test_classifier.py  test_cli.py  test_corpus_loads.py  test_corpus_quality.py  test_redteam_endpoint.py  test_reporting.py  test_sarif.py  test_server.py
