[project]
name = "promptguard"
version = "0.1.0"
description = "MCP server that red-teams LLM applications against OWASP LLM Top-10 attacks, with an adaptive jailbreak engine."
readme = "README.md"
authors = [{ name = "Abhay Singh", email = "abhaysingh0293@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "security", "mcp", "owasp", "red-team", "prompt-injection", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "coverage[toml]>=7.5.0",
]

[project.scripts]
promptguard = "promptguard.cli:app"

[project.urls]
Homepage = "https://github.com/abhay-codes07/promptguard"
Repository = "https://github.com/abhay-codes07/promptguard"
Issues = "https://github.com/abhay-codes07/promptguard/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptguard"]

[tool.hatch.build.targets.sdist]
include = ["src/promptguard", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"] # let formatter handle line length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/promptguard/cli.py" = ["B008"]  # Typer idiom requires Argument/Option as defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["src/promptguard"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
